--- a/pandas_b4.ipynb
+++ b/pandas_b4.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
-    "# import  matplotlib.pyplot as plt"
+    "import pandas as pd "
    ]
   },
   {
